<resources>
    <string name="dialog_hint" translatable="false">提示</string>
    <string name="listening" translatable="false">倾听中...</string>
    <string name="logOut" translatable="false">退出登录</string>
    <string name="is_exit" translatable="false">是否退出登录?</string>
    <string name="exit" translatable="false">退出</string>
    <string name="no_exit" translatable="false">不退出</string>
    <string name="forget_password" translatable="false">忘记密码</string>
    <string name="qa" translatable="false">问答</string>
    <string name="qa_detail" translatable="false">问答详情</string>
    <string name="login" translatable="false">登录</string>
    <string name="home" translatable="false">首页</string>
    <string name="send_after_second" translatable="false">%dS后重发</string>
    <string name="msg_manager" translatable="false">消息通知管理</string>
    <string name="msg_setting" translatable="false">消息设置</string>
    <string name="confirm_clear_cache" translatable="false">是否清除缓存？</string>
    <string name="confirm_log_out" translatable="false">是否退出登录？</string>
    <string name="clearCache" translatable="false">清除缓存</string>
    <string name="clear_success" translatable="false">清除成功</string>
    <string name="hint_input_4_code" translatable="false">请输入完整的4位验证码</string>
    <string name="sms_code_error" translatable="false">验证码错误</string>
    <string name="reget_sms_code" translatable="false">重新获取验证码</string>
    <string name="sms_send_to" translatable="false">验证码已通过短信发送至%s</string>
    <string name="sms_code" translatable="false">短信验证码</string>
    <string name="account_not_exist" translatable="false">手机号不存在</string>
    <string name="login_read" translatable="false">我已阅读并同意</string>
    <string name="basf_ystk" translatable="false">《服务协议》和《隐私政策》</string>
    <string name="hint_basf_ystk" translatable="false">请先阅读并同意《巴斯夫服务商支持管理平台服务协议》</string>
    <string name="application" translatable="false">应用</string>
    <string name="openClass" translatable="false">公开课</string>
    <string name="mine" translatable="false">我的</string>
    <string name="need_urgent" translatable="false">需要加急处理</string>
    <string name="timeout_and_refresh" translatable="false">登录超时，请刷新页面</string>
    <string name="auth_app" translatable="false">授权应用</string>
    <string name="login_now" translatable="false">立即登录</string>
    <string name="temporarily_none" translatable="false">暂无</string>
    <string name="tools" translatable="false">实用工具</string>
    <string name="platforms" translatable="false">平台应用</string>
    <string name="to_do" translatable="false">待办事项</string>
    <string name="approve_task" translatable="false">审批任务</string>
    <string name="approve" translatable="false">审批</string>
    <string name="to_train" translatable="false">待培训</string>
    <string name="to_visit" translatable="false">待随访</string>
    <string name="confirm_to_logout" translatable="false">您确定要退出登录吗?</string>
    <string name="to_login_first" translatable="false">请先登录</string>
    <string name="to_login" translatable="false">去登录</string>
    <string name="to_relogin" translatable="false">重新登录</string>
    <string name="please_choose" translatable="false">请选择</string>
    <string name="moring" translatable="false">上午</string>
    <string name="afternoom" translatable="false">下午</string>
    <string name="night" translatable="false">晚上</string>
    <string name="content_is_empty" translatable="false">暂无内容</string>
    <string name="search_result_is_empty" translatable="false">当前搜索结果为空</string>
    <string name="message_is_empty" translatable="false">暂无消息</string>
    <string name="loading_more" translatable="false">正在加载更多...</string>
    <string name="move_to_pc_to_resolve" translatable="false">暂时无法在移动端处理，请在PC端处理</string>
    <string name="no_link" translatable="false">没有获取到详情链接，请在pc端查看该任务</string>
    <string name="login_register" translatable="false">登录/注册</string>
    <string name="login_to_see_more" translatable="false">登录查看更多相关信息</string>
    <string name="setting" translatable="false">设置</string>
    <string name="login_success" translatable="false">登录成功</string>
    <string name="my_info" translatable="false">我的资料</string>
    <string name="account_info" translatable="false">账号管理</string>
    <string name="privacy" translatable="false">隐私权政策</string>
    <string name="system_permission" translatable="false">系统权限</string>
    <string name="about_us" translatable="false">关于我们</string>
    <string name="current_version" translatable="false">当前版本</string>
    <string name="collection" translatable="false">收藏</string>
    <string name="message" translatable="false">消息</string>
    <string name="recent" translatable="false">最近浏览</string>
    <string name="my_train" translatable="false">我的培训</string>
    <string name="owned_lessons" translatable="false">已拥有的培训课</string>
    <string name="learn_coin" translatable="false">学习币</string>
    <string name="my_shopping_car" translatable="false">购物车</string>
    <string name="my_order" translatable="false">我的订单</string>
    <string name="my_invoice" translatable="false">开发票</string>
    <string name="my_voucher" translatable="false">抵用券</string>
    <string name="my_certificate" translatable="false">我的证书</string>
    <string name="to_be_pioneer" translatable="false">申请成为招募先锋</string>
    <string name="pioneer" translatable="false">招募先锋</string>
    <string name="feed_back" translatable="false">意见反馈</string>
    <string name="subject_zm" translatable="false">受试者招募</string>
    <string name="open_now" translatable="false">立即开通</string>
    <string name="valid_to_date" translatable="false">有效期至%s</string>
    <string name="choose_your_preference" translatable="false">请问您的身份是？</string>
    <string name="please_choose_feedback_type" translatable="false">请选择您要反馈的问题类型</string>
    <string name="info_safe_problem" translatable="false">信息安全投诉</string>
    <string name="feed_back_hint" translatable="false">请描述您的问题，以便我们尽快为您处理(必填)</string>
    <string name="input_contact_info" translatable="false">请输入联系信息</string>
    <string name="input_optional" translatable="false">(选填)</string>
    <string name="contact_user" translatable="false">联系人</string>
    <string name="contact_phone" translatable="false">联系电话</string>
    <string name="please_input" translatable="false">请输入</string>
    <string name="hint_safe_transfer" translatable="false">联系人信息将为您加密传输，保护您的隐私</string>
    <string name="submit_feedback" translatable="false">提交反馈</string>
    <string name="please_input_problem_or_suggestion" translatable="false">请输入您的意见或问题描述</string>
    <string name="submit_success" translatable="false">提交成功</string>
    <string name="shift_account" translatable="false">切换账号</string>
    <string name="password" translatable="false">密码</string>
    <string name="modify_password" translatable="false">修改密码</string>
    <string name="current_login_account" translatable="false">当前登录的账号</string>
    <string name="old_password" translatable="false">原登录密码</string>
    <string name="please_input_old_password" translatable="false">请输入原登录密码</string>
    <string name="please_input_nick_name" translatable="false">请输入昵称</string>
    <string name="new_password" translatable="false">新登录密码</string>
    <string name="please_input_new_password" translatable="false">请输入新密码</string>
    <string name="please_input_new_password_again" translatable="false">请再次输入新密码</string>
    <string name="confirm_fix" translatable="false">确认修改</string>
    <string name="password_no_adapt" translatable="false">两次新密码输入不一致</string>
    <string name="modify_succeed" translatable="false">修改成功</string>
    <string name="hot_line" translatable="false">产品支持热线: 400-699-1906</string>
    <string name="hot_email" translatable="false">电子邮箱: bd@mobilemd.cn</string>
    <string name="copy" translatable="false">复制</string>
    <string name="copy_succeed" translatable="false">复制成功</string>
    <string name="search_lesson_name" translatable="false">搜索课程名称</string>
    <string name="open_class_train" translatable="false">公开课培训</string>
    <string name="company_train" translatable="false">企业培训</string>
    <string name="project_train" translatable="false">项目培训</string>
    <string name="valid_date" translatable="false">有效期</string>
    <string name="uncompleted" translatable="false">未完成的</string>
    <string name="completed" translatable="false">已完成的</string>
    <string name="permission_hint" translatable="false">为向您提供更好的用户体验，管陪易在特定场景可能需要向您申请以下手机系统权限</string>
    <string name="permission_contact_title" translatable="false">允许管陪易访问通讯录权限</string>
    <string name="permission_contact_desc" translatable="false">方便您邀请您的联系人加入管陪易</string>
    <string name="permission_galley_title" translatable="false">允许管陪易访问相册权限</string>
    <string name="permission_galley_desc" translatable="false">帮助您实现图片和文件的保存和读取</string>
    <string name="permission_camera_title" translatable="false">允许管陪易访问相机权限</string>
    <string name="permission_camera_desc" translatable="false">进行上传图片等</string>
    <string name="permission_device_title" translatable="false">允许管陪易访问设备信息</string>
    <string name="permission_device_desc" translatable="false">进行推送和手机类型判断等</string>
    <string name="permission_audio_title" translatable="false">允许管陪易访问麦克风</string>
    <string name="permission_audio_desc" translatable="false">进行语音聊天和语音录入信息等</string>
    <string name="has_promised" translatable="false">已允许</string>
    <string name="go_to_setting" translatable="false">去设置</string>
    <string name="go_to_study" translatable="false">去学习</string>
    <string name="agree" translatable="false">同意</string>
    <string name="unAgree" translatable="false">不同意</string>
    <string name="unAgree_exit" translatable="false">不同意并退出</string>
    <string name="unregister_account" translatable="false">注销账号</string>
    <string name="confirm_unregister" translatable="false">确认注销</string>
    <string name="mobile" translatable="false">手机号</string>
    <string name="hint_input_mobile" translatable="false">请输入手机号</string>
    <string name="hint_input_password" translatable="false">请输入密码</string>
    <string name="zm_title" translatable="false">领取招募任务</string>
    <string name="zm_content_1" translatable="false">您有1个招募任务待领取，确认领取进入CRC助手查看详情</string>
    <string name="zm_confirm" translatable="false">确认领取</string>
    <string name="zm_hint_input" translatable="false">请输入真实姓名</string>
    <string name="norms_title" translatable="false">管陪易社区规范\n科学真诚、平等友好</string>
    <string name="norms_content_1" translatable="false">管陪易致力于向广大医药行业从业者及患者提供一个高质量的交流社区。\n为了建设科学、友好、温暖的社区氛围，您在发布内容时需要遵循以下原则：</string>
    <string name="norms_content_2" translatable="false">1. 请尊重他人</string>
    <string name="norms_content_3" translatable="false">如果您发布的内容涉及他人，请征求当事人同意，并注意保护他人隐私、肖像、名誉等权利；如果您发布的内容涉及患者等弱势群体，请最大程度同理对方处境，维护对方尊严。</string>
    <string name="norms_content_4" translatable="false">2. 请尊重原创，并保证内容的真实性</string>
    <string name="norms_content_5" translatable="false">在管陪易进行分享和交流时，请保证所使用的素材来自于自己的经验或创造。如果需要借鉴，请确保有权使用，并注明引用出处；如需转载，请提前获得对方同意并注明出处。</string>
    <string name="norms_content_6" translatable="false">3. 请不要轻易给人医疗建议</string>
    <string name="norms_content_7" translatable="false">医疗关系到用户的人身健康，应由相关领域经过专业认证的人士给予相应的建议和指导。没有通过平台认证的用户应该避免发布此类内容，一经发现，平台将对此进行严惩。</string>
    <string name="norms_content_8" translatable="false">4. 请不要在发布的内容中附带广告</string>
    <string name="norms_content_9" translatable="false">管陪易致力于维护平等真实的医药行业交流生态，杜绝广告、虚假宣传。请勿发布任何带有商业推广性质的活动链接、二维码引导下载或交易行为。</string>
    <string name="norms_content_10" translatable="false">5. 请相互理解，友善沟通</string>
    <string name="norms_content_11" translatable="false">如果他人发布的内容与您的经验、看法不符，请先尽量考虑发布者的立场，同理他的心情，再做评价；如果存在不同观点，请理性看待，就事论事，不要进行人身攻击，发表辱骂性评论。</string>
    <string name="norms_content_12" translatable="false">6. 请通过举报按钮，告诉我们您发现的涉嫌违规的内容和言论</string>
    <string name="norms_content_13" translatable="false">涉嫌违规的内容经核实后，管陪易管理员会根据内容恶劣程度进行删除、禁言、封号等处理。如对管理员的处理有异议，可以通过页面的「申诉」功能进行反馈。</string>
    <string name="norms_content_14" translatable="false">管陪易会随着社区管理经验的不断丰富，出于维护管陪易社区氛围和秩序的目的，不断完善本规范。感谢您的认可与支持～</string>
</resources>