<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_alert_dialog_bac" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_alert_dialog_bac"
        >
        <TextView
            android:id="@+id/Tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/norms_title"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ScrollView
            android:id="@+id/ll_content_area"
            android:layout_width="match_parent"
            android:layout_below="@+id/Tv_title"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:layout_height="400dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/norms_content_1"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/norms_content_2"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_3"
                android:gravity="left"
                android:textColor="@color/color_gray_hint"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_4"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_5"
                android:gravity="left"
                android:textColor="@color/color_gray_hint"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_6"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_7"
                android:gravity="left"
                android:textColor="@color/color_gray_hint"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_8"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_9"
                android:gravity="left"
                android:textColor="@color/color_gray_hint"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_10"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_11"
                android:gravity="left"
                android:textColor="@color/color_gray_hint"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_12"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_13"
                android:gravity="left"
                android:textColor="@color/color_gray_hint"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="3dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norms_content_14"
                android:textColor="@color/color_gray_hint"
                android:gravity="left"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>
            </LinearLayout>
        </ScrollView>
        <TextView
            android:id="@+id/Tv_hint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_content_area"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="hint2"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/Iv_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/Tv_hint2"
            android:layout_marginTop="10dp"
            android:background="#D2D2D6" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/Iv_line"
            android:layout_height="44dp"
            android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/Rl_layout1"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_left_bac"
            android:layout_below="@+id/Iv_line"
            android:gravity="center">
            <TextView
                android:id="@+id/Tv_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />
        </RelativeLayout>
        <View
            android:id="@+id/Iv_line2"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#D2D2D6" />
        <RelativeLayout
            android:id="@+id/rl_layout2"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_below="@+id/Iv_line"
            android:gravity="center"
            android:background="@drawable/selector_dialog_right_bac">
            <TextView
                android:id="@+id/Tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="#00000000"
                android:text="@string/confirm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />
        </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>