<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_alert_dialog_bac" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_alert_dialog_bac"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/zm_title"
            android:textSize="18sp"
            android:visibility="visible"
            android:textColor="@color/contentTitle"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/zm_content_1"
                />
            <TextView
                android:id="@+id/tv_hint_input"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/color_gray_hint"
                android:textSize="14sp"
                android:text="@string/zm_hint_input"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:background="@drawable/shape_zm_input_bac"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/please_input"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/zm_confirm"
            android:gravity="center"
            />
    </LinearLayout>

</RelativeLayout>