<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="55dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/open_class_train"
            />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/color_gray_hint"
            android:text="@string/company_train"
            />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/color_gray_hint"
            android:text="@string/project_train"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_bac"
        android:layout_alignParentBottom="true"
        />
    <View
        android:id="@+id/v_slide_bar"
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        />
</RelativeLayout>