<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        />
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="We create chemistry"-->
<!--        android:textSize="17sp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:textColor="@color/colorPrimaryDark"-->

<!--        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="120dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="35dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/contentColorDark"
            android:textSize="14sp"
            android:text="@string/mobile"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:maxLines="1"
            android:maxLength="11"
            android:inputType="number"
            android:layout_marginRight="12dp"
            android:textColorHint="@color/color_999"
            android:hint="@string/hint_input_mobile"
            android:textSize="14sp"
            android:text=""
            android:textColor="@color/color_333"
            android:background="@null"
            />
        <LinearLayout
            android:layout_width="30dp"
            android:gravity="center"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/id_del"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ico_login_del"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginHorizontal="35dp"
        android:layout_height="1dp"
        android:background="@color/color_bac"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="35dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/contentColorDark"
            android:textSize="14sp"
            android:text="@string/password"
            />
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:maxLines="1"
            android:text=""
            android:layout_marginRight="12dp"
            android:textColorHint="@color/color_999"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/color_333"
            android:background="@null"
            />
        <LinearLayout
            android:layout_width="30dp"
            android:gravity="center"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/selector_eye"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginHorizontal="35dp"
        android:layout_height="1dp"
        android:background="@color/color_bac"
        />
    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:visibility="visible"
        android:layout_marginRight="35dp"
        android:layout_marginTop="16dp"
        android:textColor="#AAAAAA"
        android:textSize="14sp"
        android:text="@string/forget_password"
        />
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="96dp"
        android:background="@drawable/shape_login_bac"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        />
     <TextView
         android:id="@+id/tv_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:textSize="12sp"
         android:text="新用户注册"
         android:textColor="@color/colorPrimaryDark"

         />
      <View
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_height="40dp">
            <LinearLayout
                android:id="@id/ll_check"
                android:layout_width="30dp"
                android:gravity="center"
                android:layout_height="40dp">
                <ImageView
                    android:id="@+id/iv_check"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/selector_login_check_box"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333"
                android:textSize="10sp"
                android:text="@string/login_read"
                />
            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/color_333"
                android:textSize="10sp"
                android:text="@string/basf_ystk"
                />
        </LinearLayout>




</LinearLayout>